--- a/src/pages/admin/admin.css
+++ b/src/pages/admin/admin.css
@@ -3,12 +3,10 @@
 @tailwind components;
 
 .admin_container{
-    @apply px-[20px] py-[1rem]  font-Antonio
+    @apply font-Antonio
 }
-.admin_text{
-    @apply mx-auto text-center mt-[2rem]
-}
+
 .admin_text h2{
-    @apply text-[25px] font-[700] capitalize leading-tight
+    @apply text-[25px] font-[700] capitalize leading-tight text-center
 }
 @tailwind utilities;
